kcommandbar: Fix no central widget crashes app

BUG: 463251